--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -246,7 +246,7 @@ cómo después de acordado\\
 da dolor,\\
 cómo a nuestro paresçer\\
 \edtext{q\textit{ua}lq\textit{uie}ra}{\Afootnote{qualqujer \textit{LB3}}} tie\textit{n}po pasado \edtext{}{\Afootnote[nosep]{sapado \textit{err. LB3}}}\\
-fue mejor.
+fue mejor.\par
 \pend
 
 \begin{center}
@@ -264,7 +264,7 @@ pensando que ha de d\textit{e} durar\\
 lo que espera,\\
 más que duró lo q\textit{ue} vio,\\
 pues que todo ha de pasar\\
-por tal manera.
+por tal manera.\par
 \pend
 
 \begin{center}
@@ -282,7 +282,7 @@ allí los otros, medianos,\\
 y más chicos,\\
 \edtext{y llegados}{\Afootnote{alleguados \textit{82*JM}; allegados \textit{83*IM}}}\footnoteE{\textcite{PérezPriego2017} sugiere que la lección \textit{alleguados}, probablemente a través de la contaminación de \textit{82*JM} al subarquetipo \textit{β}, habría generado la lección \textit{allegados}.}, son iguales,\\
 los que bive\textit{n} por sus manos\\
-y los ricos.
+y los ricos.\par
 \pend
 
 \begin{center}
@@ -300,7 +300,7 @@ aq\textit{ue}l solo invoco yo \edtext{}{\Afootnote[nosep]{de verdat \textit{a. c
 de verdad\footnoteE{En \textit{LB3} se redactó \comillas{[de ver] dat} luego de \comillas{ynuoco yo}. Quizá el redactor inicial --o un secundario [\textit{cfr. gl.} XL]-- tachó el fragmento por la errónea ubicación y corrigió \comillas{de verdad} en un pequeño espacio entre los vv. 44 y 46. Puesto que se modificó \textit{verdat} por \textit{verdad} en la corrección, para la fijación se reemplazó \textit{t} en \textit{deydat} por \textit{d} para conservar la rima.} \edtext{}{\Afootnote[nosep]{\textit{p. corr. LB3}}},\\
 que en este mu\textit{n}do \edtext{bivie\textit{n}do}{\lemma{biuie\textit{n}do}\Afootnote{vinjendo \textit{HH1}}},\\
 el mu\textit{n}do no conosçió\\
-su deidad.
+su deidad.\par
 \pend
 
 \begin{center}
@@ -318,7 +318,7 @@ andamos \edtext{q\textit{ua}ndo}{\Afootnote{mientra \textit{δ}; qua\textit{n}to
 y \edtext{llegamos}{\Afootnote{allegamos \textit{83*IM}}}\\
 al tienpo que feneçemos;\\
 así que, q\textit{ua}ndo morimos,\\
-descansamos.
+descansamos.\par
 \pend
 
 \begin{center}
@@ -336,7 +336,7 @@ para sobirnos al çielo\\
 desçendió\\
 a nasçer \edtext{acá}{\lemma{aca}\Afootnote{aqua \textit{82*JM}}} entre nos\\
 \textit{e} bevir en este suelo\\
-do murió.
+do murió.\par
 \pend
 
 \begin{center}
@@ -354,7 +354,7 @@ angelical,\par
 y tan presta\\
 en conponer la cativa,\\
 dexándonos la señora\\
-desconpuesta!
+desconpuesta!\par
 \pend
 
 \begin{center}
@@ -372,7 +372,7 @@ de ellas, casos desastrados\\
 q\textit{ue} \edtext{acaesçen}{\Afootnote{contecen \textit{83*IM}}},\\
 \edtext{y de ellas, por calidad}{\lemma{y dellas por calidad}\Afootnote{dellas por su calidad \textit{δ}, \textit{HH1}, \textit{83*IM}}},\\
 en los más altos estados\\
-desfallesçen.
+desfallesçen.\par
 \pend
 
 \begin{center}
@@ -390,7 +390,7 @@ y la fuerça corporal\\
 de joventud,\\
 todo se torna graveza\\
 q\textit{ua}ndo llega al arraval \edtext{}{\Afootnote[nosep]{a la hedat \textit{err. LB3}}}\\
-de senetud.
+de senetud.\par
 \pend
 
 \begin{center}
@@ -408,7 +408,7 @@ Unos, por poco \edtext{valer}{\Afootnote{valor \textit{HH1}}},\\
 que los tiene\textit{n}!\\
 \edtext{Y otros, por poco tener}{\lemma{y otros por poco}\Afootnote{yaotros por no \textit{82*JM}; otros por no \textit{86*RL}; y otros por no \textit{HH1}; otros que por no \textit{MN19}, \textit{83*IM}}},\\
 con oficios no devidos\\
-se \edtext{ma\textit{n}tiene\textit{n}}{\Afootnote{sostienen \textit{83*IM}}}.
+se \edtext{ma\textit{n}tiene\textit{n}}{\Afootnote{sostienen \textit{83*IM}}}.\par
 \pend
 
 \begin{center}
@@ -426,7 +426,7 @@ que \edtext{rebuelve}{\lemma{rebuelue}\Afootnote{rebueluen \textit{δ}}} co\text
 presurosa,\\
 la qual no puede ser una\\
 ni \edtext{estar}{\Afootnote{ser \textit{83*IM}}} estable ni q\textit{ue}da\\
-en una cosa.
+en una cosa.\par
 \pend
 
 \begin{center}
@@ -444,7 +444,7 @@ son, en q\textit{ue} nos deleitamos,\\
 tenporales,\\
 y los torme\textit{n}tos de allá,\\
 que por ellos esperamos,\\
-eternales.
+eternales.\par
 \pend
 
 \begin{center}
@@ -462,7 +462,7 @@ corremos a rie\textit{n}da suelta\\
 sin parar;\\
 \edtext{desque}{\Afootnote{cuando \textit{HH1}, \textit{83*IM}}} vemos el engaño,\\
 \edtext{si}{\Afootnote{y \textit{γ}, \textit{83*IM}}} queremos dar la buelta\\
-no ay lugar.
+no ay lugar.\par
 \pend
 
 \begin{center}
@@ -480,7 +480,7 @@ así que no ay cosa fuerte,\\
 y \edtext{perlados}{\Afootnote{prelados \textit{82*JM}}},\\
 así los trata la muerte\\
 como a los pobres pastores\\
-de ganados.
+de ganados.\par
 \pend
 
 \begin{center}
@@ -498,7 +498,7 @@ lo de aquel \edtext{siglo}{\Afootnote{tie\textit{m}po \textit{HH1}}} pasado\\
 qué fue de ello;\\
 vengamos a lo de ayer\\
 que tan bie\textit{n} es olvidado\\
-como aquello.
+como aquello.\par
 \pend
 
 \begin{center}
@@ -516,7 +516,7 @@ parame\textit{n}tos, bordaduras\\
 y çimeras\\
 ¿fuero\textit{n} sino devaneos?\\
 ¿Qué fuero\textit{n} sino verduras\\
-de las eras?
+de las eras?\par
 \pend
 
 \begin{center}
@@ -534,7 +534,7 @@ las músicas acordadas\\
 que tañían?\\
 ¿Qué se fizo aquel dançar,\\
 aquelas ropas \edtext{trepadas}{\Afootnote{japadas \textit{82*JM}; chapadas \textit{86*RL}, \textit{ε}, \textit{83*IM}}}\\
-que \edtext{traían}{\lemma{trayan}\Afootnote{vestian \textit{ε}}}?
+que \edtext{traían}{\lemma{trayan}\Afootnote{vestian \textit{ε}}}?\par
 \pend
 
 \begin{center}
@@ -552,7 +552,7 @@ q\textit{uá}nd contrario, q\textit{uá}nd cruel\\
 se le mostró;\\
 aviéndole seído\footnoteE{\comillas{seydo} proviene del vocablo aragonés \comillas{seyer} (\textit{DICCA-XV}). En cuanto al conteo silábico, probablemente contiene una sinéresis, porque en su acentuación regular se cuenta \comillas{se-ý-do}, mas, por ser \textit{sido} una trivialización, según porta la lección \textit{82*JM}, \textit{seydo}, por cuestiones métricas, para no causar un eneasílabo, debe necesariamente contener una sinéresis en \comillas{seý}, calculando así el octosílabo \comillas{a-vién-do-le-seý-do a-mi-go}.} amigo,\\
 ¡q\textit{uá}nd poco duró con él\\
-lo que le dio!
+lo que le dio!\par
 \pend
 
 \begin{center}
@@ -570,7 +570,7 @@ los jaezes, los cavallos\\
 ta\textit{n} sobrados\\
 ¿\edtext{dónde}{\lemma{donde}\Afootnote{ado \textit{HH1}}} iremos a buscallos?\\
 ¿Qué fuero\textit{n} sino roçíos\\
-de los prados?
+de los prados?\par
 \pend
 
 \begin{center}
@@ -588,7 +588,7 @@ mas como fuese mortal,\\
 \edtext{en su}{\Afootnote{en la su \textit{82*JM}}} fragua.\\
 ¡Oh, juïzio divinal,\\
 q\textit{ua}ndo más ardía el fuego,\\
-\edtext{echaste}{\Afootnote{cebaste \textit{MN19}}} agua!
+\edtext{echaste}{\Afootnote{cebaste \textit{MN19}}} agua!\par
 \pend
 
 \begin{center}
@@ -606,7 +606,7 @@ sus villas \edtext{y}{\Afootnote{\textit{om. 86*RL}}} sus lugares,\\
 su ma\textit{n}dar,\\
 ¿qué le fuero\textit{n} sino lloros?\\
 ¿\edtext{Qué fuero\textit{n} sino pesares}{\lemma{que fuero\textit{n} sino pesares}\Afootnote{dolores, ansias pesares \textit{MN19}; fueron le sy no \textit{83*IM}}}\\
-al dexar?
+al dexar?\par
 \pend
 
 \begin{center}
@@ -624,7 +624,7 @@ que e\textit{n} ta\textit{n} alto fue sobida\\
 y ensalçada;\\
 ¿qué fue sino claridat,\\
 \edtext{que}{\Afootnote{quando \textit{86*RL}}} estando más ençe\textit{n}dida\\
-fue \edtext{amatada}{\Afootnote{matada \textit{82*JM}}}?
+fue \edtext{amatada}{\Afootnote{matada \textit{82*JM}}}?\par
 \pend
 
 \begin{center}
@@ -642,7 +642,7 @@ que fiziero\textit{n} en las guerras\\
 y en las pazes,\\
 q\textit{ua}ndo tú, cruda\footnoteE{\comillas{cruda} = \comillas{Se toma tambien por cruel, áspero, sangriento y desapiadado.} (\textit{Autoridades}, 3ª acepción).}, te ensañas,\\
 co\textit{n} tu fuerça las atierras\\
-y desfazes\footnoteE{\comillas{guerras/pazes}, \comillas{atierras/desfazes} = es probable que \textit{82*JM} haya leído erróneamente, invirtiendo el orden entre los vv. 272-273 y 275-276, algo que puede conjeturarse por la lección \textit{passos}, quizá una lectura errónea de \textit{pazes} y \textit{guerras}, que aparece en 273, cuando en el resto de testimonios aparece en el 272, al igual que en lugar de \textit{atierras} lee \textit{desfazes} y al revés.}.
+y desfazes\footnoteE{\comillas{guerras/pazes}, \comillas{atierras/desfazes} = es probable que \textit{82*JM} haya leído erróneamente, invirtiendo el orden entre los vv. 272-273 y 275-276, algo que puede conjeturarse por la lección \textit{passos}, quizá una lectura errónea de \textit{pazes} y \textit{guerras}, que aparece en 273, cuando en el resto de testimonios aparece en el 272, al igual que en lugar de \textit{atierras} lee \textit{desfazes} y al revés.}.\par
 \pend
 
 \begin{center}
@@ -660,7 +660,7 @@ la cava ho\textit{n}da, \edtext{chapada}{\Afootnote{japada \textit{82*JM}}},\\
 ¿qué aprovecha?\\
 \edtext{Q\textit{ua}ndo}{\lemma{q\textit{ua}ndo}\Afootnote{que si \textit{ε}, \textit{83*IM}}} tú vienes irada,\\
 todo lo \edtext{pasas}{\Afootnote{lleuas \textit{HH1}}} \edtext{de claro}{\Afootnote{de claro en claro \textit{82*JM}}}\\
-co\textit{n} tu flecha.
+co\textit{n} tu flecha.\par
 \pend
 
 \begin{center}
@@ -678,7 +678,7 @@ no cu\textit{n}ple que los \edtext{alabe}{\Afootnote{acaben \textit{MN19}}},\\
 pues los viero\textit{n},\\
 ni los quiero fazer caros,\\
 \edtext{pues que todo el mu\textit{n}do sabe}{\Afootnote{pues que todo el mu\textit{n}do lo sabe \textit{LB3}; pues quel mundo todo sabe \textit{86*RL}; pues el mundo todo sabe \textit{83*IM}}}\\
-quales fuero\textit{n}.
+quales fuero\textit{n}.\par
 \pend
 
 \begin{center}
@@ -696,7 +696,7 @@ Qué gr\textit{aci}a para donosos!\\
 ¡Qué razón!\\
 ¡Qué benigno a los sugebtos!\\
 Y a los bravos \edtext{y dañosos}{\Afootnote{y furiosos \textit{82*JM}; y soberuios \textit{HH1}}},\\
-¡un leó\textit{n}!
+¡un leó\textit{n}!\par
 \pend
 
 \begin{center}
@@ -714,7 +714,7 @@ Tito en liberalidad\\
 con alegría;\\
 \edtext{en su braço}{\Afootnote{enla nobleza \textit{HH1}}}, \edtext{Aurelïano}{\lemma{aureliano}\Afootnote{hun archiano \textit{82*JM}, \textit{83*IM}; abreliano \textit{86*RL}; el troyano \textit{HH1}}},\\
 \edtext{Marco Atilio}{\lemma{marco atilio}\Afootnote{marco tulio \textit{LB3}, \textit{83*IM}; mateo tulio \textit{82*JM}}} en la verdad\\
-que prometía.
+que prometía.\par
 \pend
 
 \begin{center}
@@ -732,7 +732,7 @@ en diçiplina y rigor\\
 de la guerra;\\
 \edtext{un}{\Afootnote{\textit{om. LB3}}} Constantino en la fe,\\
 \edtext{Camillo}{\lemma{camjllo}\Afootnote{canjno \textit{LB3}; camelio \textit{83*IM}}} en el \edtext{gran}{\Afootnote{gra\textit{n}de \textit{HH1}}} amor\\
-de su tierra.
+de su tierra.\par
 \pend
 
 \begin{center}
@@ -752,7 +752,7 @@ y en las lides que vençió,\\
 se perdiero\textit{n},\\
 \edtext{y}{\Afootnote{\textit{om. HH1}}} en este ofiçio ganó\\
 las \edtext{rentas}{\Afootnote{villas \textit{LB3}; rendas \textit{86*RL}}} y los basallos\\
-que le diero\textit{n}.
+que le diero\textit{n}.\par
 \pend 
 
 \begin{center}
@@ -769,7 +769,7 @@ fizo \edtext{en estas dichas guerras}{\Afootnote{en la dicha guerra \textit{82*J
 que fazía,\\
 fizo tratos ta\textit{n} ho\textit{n}rrosos\\
 que le diero\textit{n} \edtext{aún}{\lemma{avn}\Afootnote{muy \textit{83*IM}}} más \edtext{t\textit{ie}rras}{\Afootnote{tierra \textit{γ}, \textit{83*IM}}}\\
-\edtext{que}{\Afootnote{quel \textit{82*JM}}} tenía.
+\edtext{que}{\Afootnote{quel \textit{82*JM}}} tenía.\par
 \pend
 
 \begin{center}
@@ -787,7 +787,7 @@ en \edtext{la}{\Afootnote{\textit{om. 86*RL}, \textit{HH1}}} senetud\footnoteE{3
 bie\textit{n} gastada,\\
 \edtext{alcançó}{\lemma{alcanço}\Afootnote{alçando \textit{HH1}}} la \edtext{dignidat}{\Afootnote{diuinidad \textit{82*JM}}}\\
 la grand cavall\textit{er}ía\\
-del espada. 
+del espada.\par
 \pend
 
 \begin{center}
@@ -805,7 +805,7 @@ si de las obras que obró\\
 fue servido,\\
 dígalo el de Portugal,\\
 \edtext{y en}{\Afootnote{en \textit{LB3}; si en \textit{86*RL}; quien en \textit{HH1}}} Castilla, quien siguió\\
-su partido.                                                                            
+su partido.\par                                                                          
 \pend
 
 \begin{center}
@@ -823,7 +823,7 @@ a que no puede bastar\\
 cuenta çierta,\\
 en la su villa de Ocaña,\\
 vino la Muerte \edtext{a}{\Afootnote{\textit{om. 83*IM}}} llamar\edtext{}{\Afootnote[nosep]{lamar \textit{err. 83*IM}}}\\
-a su puerta, 
+a su puerta,\par
 \pend
 
 \begin{center}
@@ -841,7 +841,7 @@ fezistes ta\textit{n} poca cuenta\\
 por la fama,\\
 \edtext{fazedla de la virtud}{\Afootnote{esfuercese la virtud \textit{δ}, \textit{MN19}, \textit{83*IM}; esforçad vuestra virtud \textit{HH1}}}\\
 para sofrir \edtext{esta}{\Afootnote{aquesta \textit{HH1}}} afrenta\\
-q\textit{ue} \edtext{vos}{\Afootnote{os \textit{83*IM}}} llama.                                                                                      
+q\textit{ue} \edtext{vos}{\Afootnote{os \textit{83*IM}}} llama.\par                                                                                      
 \pend
 
 \begin{center}
@@ -859,7 +859,7 @@ acá dexáis;\par
 \edtext{ni}{\Afootnote{\textit{om. 83*IM}}} \edtext{duradera}{\Afootnote{verdadera \textit{δ}, \textit{MN19}, \textit{83*IM}}},\\
 mas co\textit{n} todo es muy mejor\\
 que la \edtext{otra}{\Afootnote{corona \textit{82*JM}}} \edtext{temporal}{\Afootnote{ynfernal \textit{LB3}; corporal \textit{MN19}}},\\                                                                       
-pereçedera.
+pereçedera.\par
 \pend
 
 \begin{center}
@@ -877,7 +877,7 @@ infernales;\par
 y con lloros;\\
 los cavall\textit{er}os famosos\\
 co\textit{n} trabajos y afliçiones\\ 
-contra moros. 
+contra moros.\par
 \pend
 
 \begin{center}
@@ -895,7 +895,7 @@ y co\textit{n} la fe ta\textit{n} entera\\
 que tenéis,\\
 partid con buena \edtext{}{\Afootnote[nosep]{bua/bna/vna \textit{LB3}}}\footnoteE{b[uen]a \textit{LB3} (?). En el manuscrito hay una mancha de tinta borrada en el folio arriba de «ua»/«na», que no propicia distinguir correctamente si es un signo de contracción  ̅ , leyéndose así «buena»/«buena» --el copista confunde \textit{n} y \textit{u} incluso en otros lugares del manuscrito--, o constituye un error, «bua». \textcite{PérezPriego1990,PérezPriego2017} y \textcite{Severin2000} leen en conjunto «vna»; Beltrán lee «bua», y sostiene que yace «con corrección, o abreviatura poco visible, interlineada» \textcite[123]{Beltrán1991}.} espera\textit{n}ça,\\
 \edtext{que la vida verdadera}{\Afootnote{estotra vida tercera \textit{δ}, \textit{MN19}, \textit{83*IM}}}\\                                                                           
-\edtext{cobraréis}{\lemma{cobrareys}\Afootnote{ganareys \textit{δ}, \textit{MN19}, \textit{83*IM}}}.» 
+\edtext{cobraréis}{\lemma{cobrareys}\Afootnote{ganareys \textit{δ}, \textit{MN19}, \textit{83*IM}}}.»\par
 \pend
 
 \begin{center}
@@ -913,7 +913,7 @@ co\textit{n} voluntad plaze\textit{n}tera,\\
 clara y pura,\\
 q\textit{ue} q\textit{ue}rer onbre bivir\\
 q\textit{ua}ndo Dios q\textit{ui}ere q\textit{ue} muera,\\
-\edtext{es}{\Afootnote{es grand \textit{MN19}}} locura.
+\edtext{es}{\Afootnote{es grand \textit{MN19}}} locura.\par
 \pend
 
 \begin{center}
@@ -931,7 +931,7 @@ sofriste sin resiste\textit{n}çia\\
 en tu persona,\\
 no por mis meresçimie\textit{n}tos,\\
 mas por tu sola cleme\textit{n}çia\\ 
-me perdona.»
+me perdona.»\par
 \pend
 
 \begin{center}
@@ -949,7 +949,7 @@ el qual \edtext{la ponga}{\lemma{laponga}\Afootnote{ladio \textit{86*RL}}} en el
 y en su gloria;\\
 \edtext{q\textit{ue} aunq\textit{ue}}{\Afootnote{y aunque \textit{82*JM}, \textit{MN19}, \textit{83*IM}}} la vida \edtext{murió}{\lemma{murio}\Afootnote{perdio \textit{LB3}, \textit{86*RL}}}\footnoteE{«murió» en \textit{82*JM}, \textit{MN19} y \textit{83*IM}. Continuando el argumento anterior, se opta por la lección \textit{murió} porque, al fallecer Rodrigo Manrique con todos sus «sentidos humanos conservados», él «se conservaría» a través de la memoria de sus allegados, cosa que no acontecería si «perdiese» la vida [carnal], porque «perder» tiene connotaciones negativas según las definiciones «ocasionar algún daño a las cosas, desmejorándolas o desluciéndolas» y «padecer algún daño, ruína o disminución en lo material, inmaterial o espiritual» (\textit{Autoridades}, acepciones 6ª y 7ª). Si la «perdiese», aceptando estas acepciones, podría «dañar» o «desmejorar» los \textit{sentidos} y el \textit{entendímiento}, facultades que «regresan» en «plena forma» a su dios, como ya demostraron \textcite{Conde2009} y \textcite{Gonzalez2019}. De ser así, \textit{perdió} anularía la lección \textit{conservados} y, por tanto, lo correcto sería \textit{murió} que, además, por pertenecer a los subarquetipos \textit{α} --82*JM y MN19-- y \textit{β} --\textit{83*IM}--, restituye la lección del arquetipo \textit{X}.},\\
 \edtext{dexónos}{\lemma{dexonos}\Afootnote{nos dexo \textit{82*JM}, \textit{MN19}, \textit{83*IM}}} harto consuelo\\ 
-su memoria.
+su memoria.\par
 \pend
 \endnumbering
 \vfill
@@ -976,7 +976,7 @@ Coplas apócrifas o póstumas en la \textit{Glosa Famossisima} de Alonso de Cerv
 		y los das,\\
 		y los males vienen corriendo,\\
 		y después de venidos\\
-		duran mas.
+		duran mas.\par
 		\pend
 		\endnumbering
 	\end{Leftside}
@@ -994,7 +994,7 @@ Coplas apócrifas o póstumas en la \textit{Glosa Famossisima} de Alonso de Cerv
 		tan poblada,\\
 		de los bienes tan desierta,\\
 		de plazeres y dulçores\\
-		despoblada.
+		despoblada.\par
 		\pend
 		\endnumbering
 	\end{Rightside}
