--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -156,7 +156,7 @@ Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcit
 		\end{tikzpicture}
 	\end{figure}%
 
-Se utilizó como texto base el testimonio \textit{LB3} por portar este lecciones no contaminadas, conservar el castellano de la época, y por ser cercano a la redacción de la obra manriqueña.
+Se utilizó como texto base el testimonio \textit{LB3} por portar este lecciones no contaminadas, conservar el castellano de la época, y por ser cercano a la redacción del texto manriqueño.
 
 Criterios de presentación gráfica\footnoteE{Las modificaciones no aplican al aparato de variantes, a excepción de \textit{nn} y las grafías dobles.}:
 %
@@ -511,7 +511,7 @@ Los infantes de Aragó\textit{n},\\
 ¿Qué fue de ta\textit{n}to galán?\\
 ¿Qué fue de tanta inve\textit{n}çión\\
 como \edtext{traxiero\textit{n}}{\Afootnote{truxieron \textit{δ}, \textit{MN19}}}?\par
-Las justas y los torneos,\edtext{}{\linenum{|||||189}\Afootnote[nosep]{\hspace*{-0.4em}/190–192 ~\textit{transp. 86*RL}}}\\
+Las justas y los torneos,\edtext{}{\linenum{|||||189}\Afootnote[nosep]{\hspace*{-0.4em}/190–192 \textit{transp. 86*RL}}}\\
 parame\textit{n}tos, bordaduras\\
 y çimeras\\
 ¿fuero\textit{n} sino devaneos?\\
