--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -12,7 +12,7 @@
 \author{\fontsize{14}{11.96}\selectfont JORGE MANRIQVE}
 \date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
-\setmainfont{Free-serif}[Numbers=Lining,BoldFont=]
+\setmainfont{FreeSerif}[ItalicFont=FreeSerif Italic,BoldFont=,Numbers=Lining] %%Por algún motivo que desconozco, a partir de la fecha fontspec no está aplicando la cursiva de FreeSerif con la simple implementación de \setmainfont{}, cuando los archivos .otf están en la carpeta fonts de Linux Mint; entonces, fue necesario definir la cursiva para que lo adopte para esta actualización.
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 %
@@ -92,8 +92,8 @@ El título, \textit{Coplas por la muerte de su padre}, resulta un tanto arbitrar
 
 No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \textit{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 --seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor-- que aparece en un impreso en carácter de \textit{editio princeps}. Es necesario destacar que los textos de Manrique solo se conservaron divididos en cancioneros, a diferencia de otros autores como Luis de Góngora, quien gozó de \comillas{colecciones} de sus textos, construyendo así un auténtico \textit{corpus}, como puede observarse en el \textit{Códice Chacón} [RES/45] en la Biblioteca Nacional de España.
 
-\subsection*{\fontsize{11}{14}\selectfont TESTIMONIOS VTILIZADOS\footnoteE{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancionero del s. XV (ca. 1360-1520)} [7 vols.].}}
-\addcontentsline{toc}{subsection}{Testimonios utilizados}
+\subsection*{\fontsize{11}{14}\selectfont TESTIMONIOS\footnoteE{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancionero del s. XV (ca. 1360-1520)} [7 vols.].}}
+\addcontentsline{toc}{subsection}{Testimonios}
 
 \textit{LB3} = \textit{Cancionero de Egerton} [British Library, Eg. 939].
 %
@@ -183,8 +183,8 @@ El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincid
 
 Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y las explicaciones adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{||}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteE{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Se eludirán variantes gráficas y de espacio. Las explicaciones contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base --correcciones o daños, entre otros-- y plausibles interpretaciones.
 
-\section*{\fontsize{11}{14}\selectfont BIBLIOGRAFÍA}
-\addcontentsline{toc}{section}{Bibliografía}
+\section*{\fontsize{11}{14}\selectfont BIBLIOGRAFÍA CONSVLTADA}
+\addcontentsline{toc}{section}{Bibliografía consultada}
 \nocite{*}
 \printbibliography[heading=none]
 \newpage
@@ -234,7 +234,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 		[I]\footnoteA{[I] {\fontsize{7.5}{9}\selectfont INCIPIT} = Coplas que fiço don jorje manrriq\textit{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\textit{ue} su padre \textit{LB3}; Dezir de don jorge manrriq\textit{ue} por la muerte de su padre \textit{82*JM}; De don jorge manrique por la muerte de su padre \textit{86*RL}; Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre don rrod\textit{rig}o ma\textit{n}riq\textit{ue} su padre \textit{HH1}; Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre \textit{83*IM}.}
 \end{center}
 \pstart
-{\fontsize{9}{11}\selectfont RECUERDE}\footnoteE{\comillas{Recuerde} no tiene la acepción de \comillas{traer a la memoria}, sino la de \comillas{despertar} y, para ello, el \textit{Tesoro de la lengua castellana} de \textcite{Covarrubias1611} registra para el vocablo \textit{recordar} \comillas{despertar el que duerme, o boluer en acuerdo, del verbo recordor}. Posteriormente se registró el significado \comillas{Metaphoricamente vale despertar al que está dormido} (\textit{Autoridades}, 2ª acepción).} el alma dormida,\\
+{\fontsize{9}{11}\selectfont RECUERDE\footnoteE{\comillas{Recuerde} no tiene la acepción de \comillas{traer a la memoria}, sino la de \comillas{despertar} y, para ello, el \textit{Tesoro de la lengua castellana} de \textcite{Covarrubias1611} registra para el vocablo \textit{recordar} \comillas{despertar el que duerme, o boluer en acuerdo, del verbo recordor}. Posteriormente se registró el significado \comillas{Metaphoricamente vale despertar al que está dormido} (\textit{Autoridades}, 2ª acepción).} EL ALMA} dormida,\\
 avive el seso y despierte\\
 contenplando\\
 cómo se pasa la vida,\\
@@ -409,6 +409,9 @@ que los tiene\textit{n}!\\
 con oficios no devidos\\
 se \edtext{ma\textit{n}tiene\textit{n}}{\Afootnote{sostienen \textit{83*IM}}}.\par
 \pend
+\relax
+\vfill
+\newpage
 
 \begin{center}
 	[XI]\footnoteA{[XI] X en \textit{82*JM}, \textit{86*RL}.}
@@ -499,6 +502,9 @@ vengamos a lo de ayer\\
 que tan bie\textit{n} es olvidado\\
 como aquello.\par
 \pend
+\relax
+\vfill
+\newpage
 
 \begin{center}
 	[XVI]\footnoteA{[XVI] XXVIII en \textit{82*JM}.}
@@ -589,6 +595,9 @@ mas como fuese mortal,\\
 q\textit{ua}ndo más ardía el fuego,\\
 \edtext{echaste}{\Afootnote{cebaste \textit{MN19}}} agua!\par
 \pend
+\relax
+\vfill
+\newpage
 
 \begin{center}
 	[XXI]\footnoteA{[XXI] XXXIII en \textit{82*JM}.}
@@ -840,7 +849,7 @@ fezistes ta\textit{n} poca cuenta\\
 por la fama,\\
 \edtext{fazedla de la virtud}{\Afootnote{esfuercese la virtud \textit{δ}, \textit{MN19}, \textit{83*IM}; esforçad vuestra virtud \textit{HH1}}}\\
 para sofrir \edtext{esta}{\Afootnote{aquesta \textit{HH1}}} afrenta\\
-q\textit{ue} \edtext{vos}{\Afootnote{os \textit{83*IM}}} llama.\par                                                                                      
+q\textit{ue} \edtext{vos}{\Afootnote{os \textit{83*IM}}} llama.\par                        
 \pend
 
 \begin{center}
