--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -12,7 +12,7 @@
 \author{\fontsize{14}{11.96}\selectfont JORGE MANRIQVE}
 \date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
-\setmainfont{FreeSerif}[ItalicFont=FreeSerif Italic,BoldFont=,Numbers=Lining] %%Por algún motivo que desconozco, a partir de la fecha fontspec no está aplicando la cursiva de FreeSerif con la simple implementación de \setmainfont{}, cuando los archivos .otf están en la carpeta fonts de Linux Mint; entonces, fue necesario definir la cursiva para que lo adopte para esta actualización.
+\setmainfont{CommonSerif}[BoldFont=]
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 %
